02-infrastructure-as-code/terraform/06-aws-create-security-group/main.tf
resource "aws_security_group" "devops_sg" {
  name        = "devops-sg"
  description = "Security group for Servers"

  # HTTP inbound rule
  ingress {
    description = "HTTP"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # SSH inbound rule
  ingress {
    description = "SSH"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
